<resources>
    <string name="app_name">Whiff</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigation_drawer_root_packet_capture">Rooted Packet Capture</string>
    <string name="navigation_drawer_non_root_packet_capture">Non-Rooted Packet Capture</string>
    <string name="navigation_drawer_packet_capture">Packet Capture</string>
    <string name="navigation_drawer_arp_spoofer">ARP Spoofer</string>
    <string name="navigation_drawer_wep_crack">WEP Crack</string>
    <string name="navigation_drawer_import">Import Data</string>
    <string name="navigation_drawer_help_faq">Help and FAQ</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_filter">Filter</string>

    <string name="ps_display">Display</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_wepcrack">WEPCrack</string>
    <string name="title_activity_packetfile_page">Packet Capture (ALL)</string>
    <string name="title_activity_packetdb_page">Packet Capture (TCP/UDP)</string>
    <string name="title_activity_import_packetfile_page">Import Packet File</string>
    <string name="title_activity_packet_file_content_page">Packet File Detail</string>

    <string name="filter">Filter</string>
    <string name="title_packet_filter">Packet Filter</string>
    <string name="hint_packet_filter_protocol">E.g. TCP/UDP</string>
    <string name="hint_packet_filter_sip">E.g. 10.5.0.1</string>
    <string name="hint_packet_filter_dip">E.g. 8.8.8.8</string>
    <string name="hint_packet_filter_length"></string>
    <string name="dialog_apply_button">Apply</string>
    <string name="dialog_clear_button">Clear</string>
    <string name="dialog_cancel_button">Cancel</string>

    <string name="export">Export</string>

    <string name="title_activity_root_scanner">Rooted Scanner</string>
    <string name="tcpdump_params">Parameters</string>

    <string name="title_activity_non_root_scanner">Non-Root Scanner</string>
    <string name="start_vpn">Start Capture</string>
    <string name="stop_vpn">Stop from Notification Bar</string>
    <string name="address">Server Address:</string>
    <string name="port">Server Port:</string>
    <string name="connect">Connect!</string>
    <string name="disconnect">Disconnect!</string>
    <string name="connecting">Network Sniffer is starting...</string>
    <string name="connected">Network Sniffer is started.</string>
    <string name="disconnecting">Network Sniffer is stopping...</string>
    <string name="disconnected">Network Sniffer is stopped.</string>
    <string name="importFile">Imports file \'%s\' to DB?</string>
    <string name="dialogYesButton">Yes</string>
    <string name="dialogNoButton">No</string>
    <string name="dialogOkButton">Ok</string>
    <string name="title_activity_pkts_test">pktsTest</string>
    <string name="title_activity_main">Whiff</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_packetdata_list">PacketDatas</string>
    <string name="title_packetdata_detail">PacketData Detail</string>

</resources>
