<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_packet_capture"
            android:icon="@drawable/ic_speaker_phone_black_24dp"
            android:title="@string/navigation_drawer_packet_capture" />
        <item
            android:id="@+id/nav_Import_File"
            android:icon="@drawable/ic_file_upload_black_24dp"
            android:title="Import File" />
    </group>

    <item android:title="Others">
        <menu>
            <group android:checkableBehavior="single">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/navigation_drawer_settings" />
            <item
                android:id="@+id/nav_help_faq"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/navigation_drawer_help_faq" />
            </group>
        </menu>
    </item>

</menu>
