<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutFilter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/wrapper1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="Protocol" />

            <EditText
                android:id="@+id/edit_protocol"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_packet_filter_protocol"
                android:visibility="gone" />

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="TCP" />

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="UDP" />

            <CheckBox
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="HTTP" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/check_protocol"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrapper2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="Source" />

            <EditText
                android:id="@+id/edit_sip"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_packet_filter_sip" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/check_sip"
                    android:layout_width="40dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrapper3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="Destination" />

            <EditText
                android:id="@+id/edit_dip"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_packet_filter_dip" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/check_dip"
                    android:layout_width="40dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrapper4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:gravity="center"
                android:text="Packet Length" />

            <EditText
                android:id="@+id/edit_length"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/hint_packet_filter_length" />

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/check_length"
                    android:layout_width="40dp"
                    android:layout_height="match_parent" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>